2009-12-12 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSBitmapImageRep.m:
	* Source/GSThemeTools.m: 
	Change the colorAtX:y: and related methods in NSBitmapImageRep
	to use flipped coordinates, matching OS X. colorAtX:0 y:0 now 
	returns the top-left pixel instead of the bottom left.

2009-12-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication (-setWindowsMenu:): Only add windows that 
	are either visible or miniaturized. 

2009-12-11 13:09-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoader.m: Added logging to help debugging of issues
	with nib loading.
	* Source/NSTextContainer.m: -[NSTextContainer initWithCoder:]
	removed call to unarchive the textview to prevent a leak.  Also
	don't set the textview as the text container.   Currently we 
	just get the contents of the text container and rebuild it
	in NSTextView.m.

2009-12-10 Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/AppKit/NSKeyValueBinding.h:
	* Source/externs.m:
	* Source/NSWindow.m (+initialize, -bind:toObject:withKeyPath:options:): 
	Added NSWindow 'title' binding.

2009-12-08 Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSTableColumn.m (-dealloc): Fixed missing release for 
	_sortDescriptorPrototype ivar.

2009-12-08 Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/NSTableColumn.h:
	* Source/NSTableColumn.m: 
	Added all new table column methods and constants up to Mac OS X 10.6.
	These new additions remain to be fully implemented and the archiving code 
	to be updated.

2009-12-08 Hans Baier <hansfbaier@googlemail.com>

	* Source/NSColorWell.m (-mouseDragged:, -mouseDown:): Applied
	patch from Eric Wasylishen to activate it on click inside the
	colored rectangle (same behavior as in OS X)

2009-12-06 Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSOutlineView.m (-draggingUpdated:): 
	Fixed drop above as a child in the previous row (when this row is an 
	empty parent).
	(-drawDropAboveIndicatorWithDropItem:atRow:childDropIndex:): Fixed the 